2013-08-10  Lubos Dolezel <lubos@dolezel.info>

	* Source/NSBundle.m: add -[NSBundle bundleURL]

2013-07-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Version: make ready for 1.24.5 release
        * Documentation/news.texi: 1.24.5 news
        * Documentation/ReleaseNotes.gsdoc: 1.24.5 release notes
        * NSTimeZones/NSTimeZones.tar: new timezone data
        * Sourcew/NSTimeZone.m: fix error in zone directory name

2013-07-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* config/objc-common.g: Add +initialize to fake NSObject class
	when compiling with the Apple runtime, since it expects	that
	method to be defined.

2013-07-11  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/GNUstepBase/GSVersionMacros.h: Fix definition of
	GS_OSX_ADJUST, which got things backward (converting a GNUstep
	style version into an OS X version instead of the other way
	around). Also make sure that MAC_OS_X_VERSION_MAX_ALLOWED gets
	converted when used in the definition of GS_OPENSTEP_V.

2013-07-09  Graham Lee <iamleeg@gmail.com>

        * Source/GNUmakefile:
        * Source/NSInvocationOperation.m:
        * Headers/Foundation/Foundation.h:
        * Headers/Foundation/NSInvocationOperation.h:
        New invocation operation class

2013-07-09  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSTLS.m: Fix memory leak (credentials)

2013-07-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSVersionMacros.h:
        Re-add define to set MAC_OS_X_VERSION_MAX_ALLOWED for OSX compatibility.

2013-07-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/cifframe.m: Fix possible incorrect free of non-malloc'ed
	memory.
	* Source/NSHost.m: fix uninitialised data warning
	* Source/NSMethodSignature.m: fix uninitialised variable
	* Source/NSPropertyList.m: avoid static analyser warning
	* Tools/gdomap.c: fix uninitialised data warning
	* Source/NSObject.m: fixup error in alignment calculation;
	was assuming that the alignment of a double would do but that's